# anyrun-cliphist-plugin

./: .gitignore  Cargo.toml  README.md
config_example/: cliphist.ron  config.ron  style.css
config_example/plugins/: README.md
src/: lib.rs
src/cliphist/: actions.rs  mod.rs  types.rs
